maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:5: error: ':' expected but ')' found.
	def isDirectionFree(dir) {
                               ^Escaper:34: error: identifier expected but '}' found.
}
^